@@ -3,6 +3,13 @@
 
 props = 1837591
 
+  19 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.1, monetdb.c:
+  Restrict database names created by monetdb to the pattern [A-Za-z0-9-_]+.
+
+  16 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
+  Fixed bug where destroying multiple databases without -f would abort after
+  the first database.
+
   08 Jun 2009; Fabian Groffen <fabian@cwi.nl> monetdb.c:
   Avoid multiple questions by merging them into a single confirmation for the
   destroy command.  This accidently fixes a bug where a response such as 'yes'
